@startuml
'https://plantuml.com/class-diagram

abstract class AbstractGame{
      # gamecot:int
      # Bossflag:boolean
      # Bosshpcoe:double
      # Bossvalue:int
      # Bosscnt:int
      # step:int
      # timeStep:int
       ....
      + paint(Graphics g)
      + paintbg(Graphics g)
      + makeharder()
      + Bossharder()
      + Enemyharder()

}

class EasyGame{
   + paintbg(Graphics g)
   + Bossharder()
   + Enemyharder()
}

class NormalGame{
   + paintbg(Graphics g)
   + Bossharder()
   + Enemyharder()
}

class HardGame{
   + paintbg(Graphics g)
   + Bossharder()
   + Enemyharder()
}

AbstractGame  <|-- EasyGame
AbstractGame  <|-- NormalGame
AbstractGame <|-- HardGame
@enduml